# self_storage

./: .dockerignore  .env.dev.example  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
nginx/: default.conf
self_storage/: settings.py  urls.py
static/css/: styles.css
static/js/: map_script.js  rental_order.js  storing_order.js
storage_rental/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
storage_rental/migrations/: 0001_initial.py  0002_auto_20211117_1154.py  0002_auto_20211118_1033.py  0003_auto_20211117_1204.py  0003_auto_20211119_0941.py  0004_auto_20211119_1127.py  0005_auto_20211119_1441.py  0006_storingorder_quantity.py  0007_alter_order_total_price.py  0008_promoсode.py  0009_auto_20211120_1146.py  0010_order_discount.py
storage_rental/templates/: base.html  index.html
storage_rental/templates/storage_rental/: application.html  base.html  index.html  payment.html  rental_order.html  storing_order.html  thanks.html
