[tool.poetry]
name = "self_storage"
version = "0.1.0"
description = ""
authors = ["balancy <balancy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.9"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^6.0.0"}
Pillow = "^8.4.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.2"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.10b0", allow-prereleases = true}
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
